--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <p>Don't have an account? <a href="#">Register</a> </p>
     </div>
 
-    <script src="/from.js"></script>
+    <script src="./from.js"></script>
 </body>
 </html>
